wip: configurando conexão com firebase na program

--- a/WarHorses/05.Api/appsettings.json
+++ b/WarHorses/05.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "FirebaseConfig": {
+      "DatabaseUrl": "https://seu-projeto.firebaseio.com/",
+      "ApiKey": "SUA-CHAVE-AQUI"
+  }
 }
