--- a/WarHorses/04.Service/04.Service.csproj
+++ b/WarHorses/04.Service/04.Service.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+    <ItemGroup>
+    <ProjectReference Include="..\02.Data\02.Data.csproj" />
+  </ItemGroup>
+
 </Project>
