--- a/WarHorses/02.Data/02.Data.csproj
+++ b/WarHorses/02.Data/02.Data.csproj
@@ -11,10 +11,15 @@
     <PackageReference Include="FirebaseAdmin" Version="3.1.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
  <PackageReference Include="Google.Cloud.Firestore" Version="3.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" /> 
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1" /> 
-    <PackageReference Include="MySql.Data" Version="9.2.0" /> 
-    <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.0" />  
+ <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
+   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+   <PrivateAssets>all</PrivateAssets>
+ </PackageReference>
+ <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2">
+   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+   <PrivateAssets>all</PrivateAssets>
+ </PackageReference> 
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />  
   </ItemGroup> 
   <ItemGroup>
     <ProjectReference Include="..\01.Core\01.Core.csproj" />
